--- a/app/views/course_index.erb
+++ b/app/views/course_index.erb
@@ -4,7 +4,7 @@
 
 <% @courses.each do |course| %>
 
-<li><a href="/course/<%=course.id%>"><%= course.title%></a></li>
+<li><a href="/course/<%=course.id%>"><%= course.subject%></a></li>
 
 <% end %>
 
