--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -3,11 +3,17 @@
 <head>
   
   <link rel="stylesheet" href="/css/normalize.css">
-  
   <link rel="stylesheet" href="/css/bootstrap.css">
-<link rel="stylesheet" href="/css/application.css">
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="/css/application.css">
+  <link rel="stylesheet" href="/css/base.css">
+  <link rel="stylesheet" href="/css/Spacetree.css">
+
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script language="javascript" type="text/javascript" src="/js/jit.js"></script>
+  <script language="javascript" type="text/javascript" src="/js/example1.js"></script>
   <script src="/js/application.js"></script>
+
+
 
   <title></title>
 </head>
