testing more requisite courses, need to work on getting active record data to a json object like in exmaple1 file

--- a/app/views/_children_view.erb
+++ b/app/views/_children_view.erb
@@ -24,7 +24,7 @@
       <div id="infovis"></div>    
     </div>
 
-    <!-- <div id="right-container">
+    <div id="right-container">
 
       <h4>Tree Orientation</h4>
       <table>
@@ -82,7 +82,7 @@
 </tr>
 </table>
 
-</div> -->
+</div>
 
 <div id="log"></div>
 </div>
