--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,7 +1,7 @@
 .container {
   margin: 10px 160px;
   width: 600px;
-  padding: 0px 20px 20px 20px;
+  padding: 100px 20px 20px 20px;
   border: 1px dotted black;
 }
 
@@ -13,18 +13,18 @@ body {
   background-color: #f5f5f5;
 }
 nav{
-    padding-top: 50px;
-  left:0;
+padding-top: 10px;
   top:0;
-  width:150px;
+  width:100%;
   position: fixed;
   background-color: #CCCCCC;
-  height:100%;
+
   margin-right: 20px;
   border-right: 2px solid gray;
 }
 nav li {
   list-style: none;
+  float:left;
   padding: 10px 0 10px 0; 
   border-bottom: 1px solid grey;
 }
