--- a/public/css/base.css
+++ b/public/css/base.css
@@ -38,15 +38,16 @@ a {
 #right-container, 
 #center-container {
     height:600px;
-    position:absolute;
     top:0;
+    float:left;
 }
 
-#left-container, #right-container {
+ #right-container {
     width:200px;
     color:#686c70;
     text-align: left;
     overflow: auto;
+    float:right;
     background-color:#fff;
     background-repeat:no-repeat;
     border-bottom:1px solid #ddd;
