fixed some styling so stephen could continue working

--- a/app/views/_children_view.erb
+++ b/app/views/_children_view.erb
@@ -26,7 +26,7 @@
 
     <div id="right-container">
 
-      <h4>Tree Orientation</h4>
+      <h4>Course Tree Orientation</h4>
       <table>
         <tr>
           <td>
@@ -74,7 +74,7 @@
   </tr>
   <tr>
    <td>
-    <label for="s-root">Set as Root </label>
+    <label for="s-root">Selected Course = new root </label>
   </td>
   <td>
     <input type="radio" id="s-root" name="selection" value="root" />
