--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,48 +1,59 @@
-.container {
-  margin: 10px 160px;
-  width: 600px;
-  padding: 100px 20px 20px 20px;
-  border: 1px dotted black;
-}
-
-
 
 body {
   padding-top: 20px;
   padding-bottom: 40px;
-  background-color: #f5f5f5;
+  background-color: #88c477;
 }
+
+
 nav{
-padding-top: 10px;
+  padding-top: 10px;
   top:0;
   width:100%;
   position: fixed;
-  background-color: #CCCCCC;
-
+  background-color: white;
+  box-shadow: inset 0 2px #fff, 0 2px 3px rgba(34,25,25,0.4);
+  -moz-box-shadow: inset 0 2px #fff, 0 2px 3px rgba(34,25,25,0.4);
+  -webkit-box-shadow: inset 0 2px #fff, 0 2px 3px rgba(34,25,25,0.4);
   margin-right: 20px;
   border-right: 2px solid gray;
 }
 nav li {
   list-style: none;
   float:left;
-  padding: 10px 0 10px 0; 
-  border-bottom: 1px solid grey;
+  padding: 0 0 10px 0; 
+  padding-right: 7px;
 }
 nav ul{
   padding-left:10px;
+  float:right;
 }
- 
- 
+
 nav a {
   text-decoration: none;
   color: black;
 }
 
 #brand{
-
+  text-align: left;
   font-size: 2em;
+  float: left;
+  padding-left: 20px;
+  padding-top: 5px;
 }
 
-
-
+#right-container{
+     box-shadow: inset 0 2px #fff, 0 2px 3px rgba(34,25,25,0.4);
+  -moz-box-shadow: inset 0 2px #fff, 0 2px 3px rgba(34,25,25,0.4);
+  -webkit-box-shadow: inset 0 2px #fff, 0 2px 3px rgba(34,25,25,0.4);
+}
+.container {
+  background-color: white;
+  margin: 120px auto;
+  width: 600px;
+  padding: 10px 20px 20px 20px;
+   box-shadow: inset 0 2px #fff, 0 2px 3px rgba(34,25,25,0.4);
+  -moz-box-shadow: inset 0 2px #fff, 0 2px 3px rgba(34,25,25,0.4);
+  -webkit-box-shadow: inset 0 2px #fff, 0 2px 3px rgba(34,25,25,0.4);
+}
 /*HTHIS IS THE EXPERIEMENT*/
