--- a/public/css/base.css
+++ b/public/css/base.css
@@ -27,23 +27,56 @@ a {
     color:#23A4FF;
 }
 
+nav{
+  padding-top: 10px;
+  top:0;
+  width:100%;
+  position: fixed;
+  background-color: white;
+  box-shadow: inset 0 2px #fff, 0 2px 3px rgba(34,25,25,0.4);
+  -moz-box-shadow: inset 0 2px #fff, 0 2px 3px rgba(34,25,25,0.4);
+  -webkit-box-shadow: inset 0 2px #fff, 0 2px 3px rgba(34,25,25,0.4);
+  margin-right: 20px;
+  border-right: 2px solid gray;
+}
+nav li {
+  list-style: none;
+  float:left;
+  padding: 0 0 10px 0; 
+  padding-right: 7px;
+}
+nav ul{
+  padding-left:10px;
+  float:right;
+}
+
+nav a {
+  text-decoration: none;
+  color: black;
+}
+
+#brand{
+  text-align: left;
+  font-size: 2em;
+  float: left;
+  padding-left: 20px;
+  padding-top: 5px;
+}
+
+
 #container {
-    width: 1000px;
-    height: 600px;
-    margin:0 auto;
-    position:relative;
+  background-color: white;
+  margin: 120px auto;
+  width: 90%;
+  height:900px;
+  padding: 10px 20px 20px 20px;
+  box-shadow: inset 0 2px #fff, 0 2px 3px rgba(34,25,25,0.4);
+  -moz-box-shadow: inset 0 2px #fff, 0 2px 3px rgba(34,25,25,0.4);
+  -webkit-box-shadow: inset 0 2px #fff, 0 2px 3px rgba(34,25,25,0.4);
 }
 
-#left-container, 
-#right-container, 
-#center-container {
-    height:600px;
-    top:0;
-    float:left;
-}
-
- #right-container {
-    width:200px;
+#right-container {
+    width:250px;
     color:#686c70;
     text-align: left;
     overflow: auto;
@@ -51,32 +84,29 @@ a {
     background-color:#fff;
     background-repeat:no-repeat;
     border-bottom:1px solid #ddd;
-}
-
-#left-container {
-    left:0;
-    background-image:url('col2.png');
-    background-position:center right;
-    border-left:1px solid #ddd;
-    
-}
-
-#right-container {
-    right:0;
     background-image:url('col1.png');
     background-position:center left;
     border-right:1px solid #ddd;
+    box-shadow: inset 0 2px #fff, 0 2px 3px rgba(34,25,25,0.4);
+    -moz-box-shadow: inset 0 2px #fff, 0 2px 3px rgba(34,25,25,0.4);
+    -webkit-box-shadow: inset 0 2px #fff, 0 2px 3px rgba(34,25,25,0.4);;
 }
 
 #right-container h4{
     text-indent:8px;
 }
+#right-container table {
+    border: 1 solid black;
+}
 
 #center-container {
-    width:600px;
-    left:200px;
+    float:left;
+    width:70%;
     background-color:#1a1a1a;
     color:#ccc;
+    box-shadow: inset 0 2px #fff, 0 2px 3px rgba(34,25,25,0.4);
+    -moz-box-shadow: inset 0 2px #fff, 0 2px 3px rgba(34,25,25,0.4);
+    -webkit-box-shadow: inset 0 2px #fff, 0 2px 3px rgba(34,25,25,0.4);
 }
 
 .text {
@@ -99,11 +129,9 @@ a {
 
 
 #infovis {
-    position:relative;
-    width:720px;
-    height:720px;
-    margin:auto;
-    overflow:hidden;
+    width:800px;
+    height:800px;
+    margin:0;
 }
 
 /*TOOLTIPS*/
