--- a/public/css/base.css
+++ b/public/css/base.css
@@ -28,6 +28,7 @@ a {
 }
 
 nav{
+    z-index: 99;
   padding-top: 10px;
   top:0;
   width:100%;
@@ -67,8 +68,9 @@ nav a {
 #container {
   background-color: white;
   margin: 120px auto;
-  width: 90%;
-  height:900px;
+  width: 99%;
+  height 1000px;
+  background-color:red;
   padding: 10px 20px 20px 20px;
   box-shadow: inset 0 2px #fff, 0 2px 3px rgba(34,25,25,0.4);
   -moz-box-shadow: inset 0 2px #fff, 0 2px 3px rgba(34,25,25,0.4);
@@ -101,8 +103,8 @@ nav a {
 
 #center-container {
     float:left;
-    width:70%;
-    background-color:#1a1a1a;
+    width:90%;
+
     color:#ccc;
     box-shadow: inset 0 2px #fff, 0 2px 3px rgba(34,25,25,0.4);
     -moz-box-shadow: inset 0 2px #fff, 0 2px 3px rgba(34,25,25,0.4);
@@ -129,9 +131,10 @@ nav a {
 
 
 #infovis {
-    width:800px;
+    width:80%%;
     height:800px;
     margin:0;
+        background-color:#1a1a1a;
 }
 
 /*TOOLTIPS*/
