changes from pairing with my mentor colin

--- a/app/views/course_index.erb
+++ b/app/views/course_index.erb
@@ -1,11 +1,19 @@
-<h1> Courses Index </h1>
-
-<ul>
-
-<% @courses.each do |course| %>
-
-<li><a href="/course/<%=course.id%>"><%= course.subject%></a></li>
-
-<% end %>
-
-</ul>
+<div id="container">
+  <div id="index">
+  <h1> Courses Index </h1>
+  <table>
+    <tr>
+      <th>ID</th> 
+      <th>Course Subject + CRS</th> 
+      <th>Course Title</th>
+    </tr>
+    <% @courses.each do |course| %>
+    <tr>
+      <td><%= course.id %> </td>
+      <td><a href="/tree/<%=course.id%>"><%= course.SUBJ%> <%= course.CRS%></a></td>
+      <td> <%=course.TITLE%> </td>
+    </tr>
+    <% end %>
+  </table>
+  </div>
+</div>
