--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -11,7 +11,6 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script language="javascript" type="text/javascript" src="/js/jit.js"></script>
   <script language="javascript" type="text/javascript" src="/js/example1.js"></script>
-  <script src="/js/application.js"></script>
 
 
 
@@ -21,9 +20,10 @@
 <nav>
   <span id="brand"><a href="/">CourseTree</a></span>
   <ul>
-  <li> <a href="/course/create">map a course</a></li>
-  <li> <a href="/course/index">course index</a></li>
-  <li> <a href="/course/requisite/create">add a requisite</a></li>
+  <li> <a href="/tree/1"> View Demo |</a></li>
+  <li> <a href="/course/index">Tree index |</a></li>
+  <li> <a href="/course/create"> Map course |</a></li>
+  <li> <a href="/course/requisite/create"> Add requisite</a></li>
 </ul>
 </nav>
 
